fixed PORT FOLIO word-spacing & updated text-shadow

--- a/src/Components/Portfolio/Portfolio.scss
+++ b/src/Components/Portfolio/Portfolio.scss
@@ -14,8 +14,9 @@
     position: -webkit-sticky; 
     position: sticky; 
     text-align: center;
-    text-shadow: -5px 15px 15px rgb(82, 80, 80);
-    top: 0; 
+    text-shadow: -5px 15px 5px rgb(82, 80, 80);
+    top: 0;  
+    word-spacing: -25px;
     z-index: -200;}
 /*////////////////////////////////////////////////////////////////////
 ////////// Portfolio Card Container and Adjustments //////////////////
